--- a/GS_inuse_yes.html
+++ b/GS_inuse_yes.html
@@ -185,7 +185,7 @@
                                         </div><!--END radiogroup-->
                                         <p class="weight600" id="foreigninuse">Do you have a registration and/or pending application in a foreign country for same goods/services?</p>
                                         <div role="radiogroup" aria-labelledby="foreigninuse">
-                                            <div class="radio" class="form-group form-group-md">
+                                            <div class="radio form-group form-group-md">
                                               <label for="inlineRadio23" class="radio-inline radiocontainer">Yes<input type="radio" name="foreigninuse" id="inlineRadio23" value="yes" tabindex="0"><span class="checkmark"></span></label>
                                             </div>
                                             <div class="radio">
@@ -213,7 +213,6 @@
        </main>
      </div><!--END div content-->
     </div><!--END div container-->
-  
 		    <!--jquery and web jars -->
     <!--<script th:src="@{/webjars/jquery/jquery.min.js}"></script>-->
     <script type="application/javascript" src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
