Mark Details Stylized Change Req
As per stand-up discussion, removed 'mark detected' inferences

--- a/marks_stylized.html
+++ b/marks_stylized.html
@@ -203,7 +203,7 @@
                                 </div>
                                 <div class="form-group form-group-md col-xs-12">
                                     <p class="weight600" aria-level="3">Mark Literal</p>
-                                    <label for="ta2"><span class="required weight600">&#42;</span>Verify the words, letters and numbers appearing in the mark and edit if necessary. <a href="#" data-toggle="tooltip" title="Any entry in this field that is not found in the mark image will not be considered part of the mark." class="glyphicon glyphicon-info-sign test" data-placement="right"></a></label> 
+                                    <label for="ta2"><span class="required weight600">&#42;</span>Enter the words, letters and numbers appearing in the mark. <a href="#" data-toggle="tooltip" title="Any entry in this field that is not found in the mark image will not be considered part of the mark." class="glyphicon glyphicon-info-sign test" data-placement="right"></a></label> 
                                     <textarea id="ta2" rows="3" class="form-control" required></textarea>
                                         <div class="row">
                                             <div class="col-sm-12">
@@ -219,18 +219,17 @@
                                                         </div>
                                                     </div>
                                                     <div>
-                                                        <p class="weight600">Color was detected in your mark.</p>
                                                         <p id="color">Are you claiming color as a feature of the mark?</p>                                            				
                                                         <div role="radiogroup" aria-labelledby="color" class="form-group form-group-md" >
                                                             <label for="inlineRadio1" class="radio-inline radiocontainer">Yes<input type="radio" name="coloradio" id="inlineRadio1" value="yes" tabindex="0"><span class="checkmark"></span></label>
                                                             <label for="inlineRadio2" class="radio-inline radiocontainer">No<input type="radio" name="coloradio" id="inlineRadio2" value="no" tabindex="0"><span class="checkmark"></span></label>
                                                         </div><!--END radiogroup-->
                                                         <div id="yescolorclaim"><!--toggle 'yes' radio-->
-                                                            <label for="ta3">Verify and edit the following colors detected in your mark.</label> 
+                                                            <label for="ta3">Identify the colors in your mark.</label> 
                                                             <textarea id="ta3" rows="3" class="form-control"></textarea>
                                                             <h3 class="weight600">Mark Description</h3>
-                                                            <label for="ta2"><span class="weight600">&#42;</span> Verify and edit description of the mark including the location of the colors. <a href="#" data-toggle="tooltip" title="If the mark is a color mark, the description must include the nature and location of the color; i.e., you must specifically state where each color is located within the mark." class="glyphicon glyphicon-info-sign test" data-placement="right"></a></label>  
-                                                            <textarea id="ta2" rows="3" class="form-control" placeholder="The mark consists of the wording &#8220;SCRUBBY BUTTS SOAP CO.&#8221; in stylized red font" required></textarea>
+                                                            <label for="ta2"><span class="weight600">&#42;</span> Enter the description of the mark including the location of the colors. <a href="#" data-toggle="tooltip" title="If the mark is a color mark, the description must include the nature and location of the color; i.e., you must specifically state where each color is located within the mark." class="glyphicon glyphicon-info-sign test" data-placement="right"></a></label>  
+                                                            <textarea id="ta2" rows="3" class="form-control" required></textarea>
                                                         </div>
                                                         <div id="nocolorclaim" class="form-group form-group-md"><!--toggle 'no' radio-->
                                                             <input class="form-check-input checkmark" type="checkbox" value="accept B W mark" role="checkbox" tabindex="0" aria-labelledby="acceptmark" id="bwmark">
@@ -262,13 +261,12 @@
                                                         </div>
                                                     </div>
                                                     <div>
-                                                    	<p class="weight600">Foreign wording was detected in your mark.</p>
-                                                        <p id="foreign">Confirm your mark contains foreign wording.</p>                                                        <div role="radiogroup" aria-labelledby="foreign" class="form-group form-group-md">
+                                                        <p id="foreign">Does your mark contain foreign wording?</p>                                                        <div role="radiogroup" aria-labelledby="foreign" class="form-group form-group-md">
                                                             <label for="inlineRadio3" class="radio-inline radiocontainer">Yes<input type="radio" name="foreignradio" id="inlineRadio3" value="yes" tabindex="0"><span class="checkmark"></span></label>
                                                             <label for="inlineRadio4" class="radio-inline radiocontainer">No<input type="radio" name="foreignradio" id="inlineRadio4" value="no" tabindex="0"><span class="checkmark"></span></label>
                                                         </div><!--END radiogroup-->
                                                         <div id="yestranslation"><!--toggle 'yes' radio-->
-                                                            <h3 class="weight600">Verify the foreign language and the translation.</h3>
+                                                            <h3 class="weight600">Enter the foreign language and the translation.</h3>
                                                             <div class="row">
                                                                 <div class="form-group form-group-md col-xs-12 col-md-3">
                                                                     <label for="language">Language</label>
