--- a/filing_basis_abde.html
+++ b/filing_basis_abde.html
@@ -184,7 +184,7 @@
                     <div class="row">
                         <div class="col-xs-12" id="basisabde">
                                 <div class="lead">
-                                    <p class="weight600">Please provide information about each class you have selected for your mark.</p>
+                                    <p class="weight600">Provide a specimen for all goods/services within the class. Only one specimen is required per class.</p>
                                 </div>
                                 <div class="card-text noexpand blue">
                                     <h2 class="card-title weight600">Class 003</h2>
@@ -328,13 +328,15 @@
                                                                 </div>
                                                             </div><!--pending foreign-->
                                                             <div class="appendapending"></div>
-                                                            <div class="btn-group btn-group-justified large" role="group" id="pluspending" aria-label="Add or delete additional pending foreign registrations">
-                                                                <div class="col-xs-5 col-sm-12 btn-group">
-                                                                    <button type="button" class="btn-sm btn-success add ctr" id="addpending">Add Additional Application</button>
-                                                                </div>
-                                                                <div class="col-xs-7 col-sm-12 btn-group">
-                                                                    <button type="button" class="btn-sm btn-success add ctr" id="resetpending">Remove Additional Application</button>
-                                                                </div>
+                                                            <div class="col-xs-12 btn-group btn-group-justified large" role="group" id="pluspending" aria-label="Add or delete additional pending foreign registrations">
+                                                            	<div class="row">
+                                                                    <div class="col-xs-6 btn-group">
+                                                                        <button type="button" class="btn-sm btn-success add" id="addpending">Add Additional Application</button>
+                                                                    </div>
+                                                                    <div class="col-xs-6 btn-group">
+                                                                        <button type="button" class="btn-sm btn-success add" id="resetpending">Remove Additional Application</button>
+                                                                    </div>
+                                                             	</div>
                                                             </div>
                                                             <div class="col-xs-12 form-group form-group-md holdsaforeign">
                                                             	<div class="col-xs-12">
@@ -370,12 +372,14 @@
                                                                 </div>
                                                             </div><!--foreign-->
                                                             <div class="appendaforeign"></div>
-                                                            <div class="btn-group btn-group-justified large" role="group" id="plusforeign" aria-label="Add or delete additional foreign registrations">
-                                                                <div class="col-xs-5 col-sm-12 btn-group">
-                                                                    <button type="button" class="btn-sm btn-success add ctr" id="addforeign">Add Additional Registration</button>
-                                                                </div>
-                                                                <div class="col-xs-7 col-sm-12 btn-group">
-                                                                    <button type="button" class="btn-sm btn-success add ctr" id="resetforeign">Remove Additional Registration</button>
+                                                            <div class="col-xs-12 btn-group btn-group-justified large" role="group" id="plusforeign" aria-label="Add or delete additional foreign registrations">
+                                                            	<div class="row">
+                                                                    <div class="col-xs-6 btn-group">
+                                                                        <button type="button" class="btn-sm btn-success add" id="addforeign">Add Additional Registration</button>
+                                                                    </div>
+                                                                    <div class="col-xs-6 btn-group">
+                                                                        <button type="button" class="btn-sm btn-success add" id="resetforeign">Remove Additional Registration</button>
+                                                                    </div>
                                                                 </div>
                                                             </div><!--end buttons-->
                                                         </div><!--row-->
