Mark Details - Standard Character + buttons

--- a/filing_basis_abde.html
+++ b/filing_basis_abde.html
@@ -331,10 +331,10 @@
                                                             <div class="col-xs-12 btn-group btn-group-justified large" role="group" id="pluspending" aria-label="Add or delete additional pending foreign registrations">
                                                             	<div class="row">
                                                                     <div class="col-xs-6 btn-group">
-                                                                        <button type="button" class="btn-sm btn-success add" id="addpending">Add Additional Application</button>
+                                                                        <button type="button" class="btn-sm btn-success add ctr" id="addpending">Add Additional Application</button>
                                                                     </div>
                                                                     <div class="col-xs-6 btn-group">
-                                                                        <button type="button" class="btn-sm btn-success add" id="resetpending">Remove Additional Application</button>
+                                                                        <button type="button" class="btn-sm btn-success add ctr" id="resetpending">Remove Additional Application</button>
                                                                     </div>
                                                              	</div>
                                                             </div>
@@ -375,10 +375,10 @@
                                                             <div class="col-xs-12 btn-group btn-group-justified large" role="group" id="plusforeign" aria-label="Add or delete additional foreign registrations">
                                                             	<div class="row">
                                                                     <div class="col-xs-6 btn-group">
-                                                                        <button type="button" class="btn-sm btn-success add" id="addforeign">Add Additional Registration</button>
+                                                                        <button type="button" class="btn-sm btn-success add ctr" id="addforeign">Add Additional Registration</button>
                                                                     </div>
                                                                     <div class="col-xs-6 btn-group">
-                                                                        <button type="button" class="btn-sm btn-success add" id="resetforeign">Remove Additional Registration</button>
+                                                                        <button type="button" class="btn-sm btn-success add ctr" id="resetforeign">Remove Additional Registration</button>
                                                                     </div>
                                                                 </div>
                                                             </div><!--end buttons-->
