--- a/marks_standard_character.html
+++ b/marks_standard_character.html
@@ -185,7 +185,7 @@
                                                 </div>
                                                 <div class="col-xs-12 col-md-6 form-group form-group-md">
                                                     <label for="ta2" class="sr-only">Enter mark text</label> 
-                                                    <textarea id="ta2" rows="3" class="form-control" required></textarea>
+                                                    <textarea id="ta2" rows="6" cols="20" wrap="hard" class="form-control" required></textarea>
                                                 </div>
                                                 <div class="col-xs-12 col-md-6 form-group form-group-md" id="displaytext">
                                                     <p id="showmarktxt"></p>
