Marks Layout change requ.

--- a/marks_layout_M017.html
+++ b/marks_layout_M017.html
@@ -176,16 +176,10 @@
                                     </div>
                                     <div id="marktype" class="collapse Accordion-panel" role="region" aria-labelledby="marktypebtn">
                                         <div class="Accordion">
-                                            <p>Trademarks and service marks: Are generally words, symbols, designs, or combinations of these. Marks are often brand names; they work to identify the sources of goods or services, showing that they come from particular manufacturers or sellers. Trademarks are for goods, which are physical things that are sold to others, like shoes.  Service marks are for services that are provided to others, like tax preparation services.</p>
+                                            <p>Trademarks and service marks: Are generally words, symbols, designs, or combinations of these. Marks are often brand names; they work to identify the sources of goods or services, showing that they come from particular manufacturers or sellers. Trademarks are for goods, which are physical things that are sold to others, like shoes. Service marks are for services that are provided to others, like tax preparation services.</p>
                                         </div>
                                     </div>
-                                    <p id="typemark"><span class="weight600">&#42;</span> What type of mark are you applying for? <a href="#" data-toggle="tooltip" title="" class="glyphicon glyphicon-info-sign test" data-placement="right" data-original-title="Trademarks and service marks: Are generally words, symbols, designs, or combinations of these.  Marks are often brand names; they work to identify the sources of goods or services, showing that they come from particular manufacturers or sellers.  Trademarks are for goods, which are physical things that are sold to others, like shoes.  Service marks are for services that are provided to others, like tax preparation services.
- 
-Certification Mark:  A certification mark is a type of trademark that is used to show consumers that particular goods and/or services, or their providers, have met certain standards.  (See the Certification Marks webpage)
- 
-Collective Mark:  A collective mark is mark used by members of a collective organization to identify their goods and/or services and distinguish them from the goods and/or services of non-members.  (See TMEP Section 1303)
- 
-Collective Membership Mark:  A collective membership mark is a mark used by the members of a particular organization to signify that they are members of that organization (e.g., a social club or labor union:  See TMEP Section 1304)."></a></p>
+                                    <p id="typemark"><span class="weight600">&#42;</span> What type of mark are you applying for? <a href="#" data-toggle="tooltip" title="" class="glyphicon glyphicon-info-sign test" data-placement="right" data-original-title="Trademarks and service marks: Are generally words, symbols, designs, or combinations of these.  Marks are often brand names; they work to identify the sources of goods or services, showing that they come from particular manufacturers or sellers.  Trademarks are for goods, which are physical things that are sold to others, like shoes.  Service marks are for services that are provided to others, like tax preparation services."></a></p>
                                <fieldset>
                                     <legend>Select the type of mark you are applying for</legend>
                                     <div><!-- Button trigger modal -->
@@ -209,9 +203,7 @@ Collective Membership Mark:  A collective membership mark is a mark used by the 
                                                     <h4 class="modal-title" id="certmodallabel">Certification Mark</h4>
                                                   </div>
                                                   <div class="modal-body">
-                                                    <p>A certification mark is a type of trademark that is used to show consumers that particular goods and/or services, or their providers, have met certain standards.  (See TMEP Section 1306)</p>
-
-<p>Link for TMEP Section 3016: <a href="https://tmep.uspto.gov/RDMS/TMEP/current#/current/TMEP-1300d1e585.html" target="_blank">https://tmep.uspto.gov/RDMS/TMEP/current#/current/TMEP-1300d1e585.html</a></p>
+                                                    <p>A certification mark is a type of trademark that is used to show consumers that particular goods and/or services, or their providers, have met certain standards. (<a href="https://tmep.uspto.gov/RDMS/TMEP/current#/current/TMEP-1300d1e585.html" target="_blank">See TMEP Section 1306</a>)</p>
                                                   </div>
                                                   <div class="modal-footer">
                                                     <button type="button" class="btn btn-sm btn-success" data-dismiss="modal">Close</button>
@@ -230,10 +222,7 @@ Collective Membership Mark:  A collective membership mark is a mark used by the 
                                                     <h4 class="modal-title" id="collectmodallabel">Collective Mark</h4>
                                                   </div>
                                                   <div class="modal-body">
-                                                    <p>A collective mark is mark used by members of a collective organization to identify their goods and/or services and distinguish them from the goods and/or services of non-members.  (See TMEP Section 1303)</p>
-
-													<p>Link for TMEP Section 3013: <a href="https://tmep.uspto.gov/RDMS/TMEP/current#/current/TMEP-1300d1e347.html" target="_blank">https://tmep.uspto.gov/RDMS/TMEP/current#/current/TMEP-1300d1e347.html</a></p>
-                                                  </div>
+                                                    <p>A collective mark is mark used by members of a collective organization to identify their goods and/or services and distinguish them from the goods and/or services of non-members. (<a href="https://tmep.uspto.gov/RDMS/TMEP/current#/current/TMEP-1300d1e347.html" target="_blank">See TMEP Section 1303</a>)</p>                                           </div>
                                                   <div class="modal-footer">
                                                     <button type="button" class="btn btn-sm btn-success" data-dismiss="modal">Close</button>
                                                   </div>
@@ -251,9 +240,7 @@ Collective Membership Mark:  A collective membership mark is a mark used by the 
                                                     <h4 class="modal-title" id="collectmemberlabel">Collective Membership Mark</h4>
                                                   </div>
                                                   <div class="modal-body">
-                                                    <p>A collective membership mark is a mark used by the members of a particular organization to signify that they are members of that organization (e.g., a social club or labor union). (See TMEP Section 1304)</p>
-
-													<p>Link for TMEP Section 3014: <a href="https://tmep.uspto.gov/RDMS/TMEP/current#/current/TMEP-1300d1e417.html" target="_blank">https://tmep.uspto.gov/RDMS/TMEP/current#/current/TMEP-1300d1e417.html</a></p>
+                                                    <p>A collective membership mark is a mark used by the members of a particular organization to signify that they are members of that organization (e.g., a social club or labor union). (<a href="https://tmep.uspto.gov/RDMS/TMEP/current#/current/TMEP-1300d1e417.html" target="_blank">See TMEP Section 1304</a>)</p>
                                                   </div>
                                                   <div class="modal-footer">
                                                     <button type="button" class="btn btn-sm btn-success" data-dismiss="modal">Close</button>
@@ -274,9 +261,6 @@ Collective Membership Mark:  A collective membership mark is a mark used by the 
                     <div class="container-fluid">
                         <div class="row" id="panels">
                                 <div class="row">
-                                	<div class="col-xs-12">
-                                        <p><span class="weight600">&#42;</span> Which of the following types best describes the mark you want to apply for?</p>
-                                    </div>
                                         <div class="col-xs-12">
                                             <div class="row">
                                                 <div class="col-sm-12 col-md-6">
