Contacts Widget + Fill from Contact Button

--- a/attorney_info_M010.html
+++ b/attorney_info_M010.html
@@ -788,27 +788,27 @@ Upload bar credentials, including certificate of good standing from highest cour
                                     	<td class="list-group-item inner-addon right-addon col-xs-6"><i class="glyphicon glyphicon-search" aria-hidden="true"></i><input type="text" class="form-control" id="contactsearch" placeholder="Search" aria-label="search"></td>
                                  	</tr>
                                     <tr class="row">
-                                    	<td class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="avo"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span><span class="glyphicon glyphicon-ok-sign visuallyremoved" aria-hidden="true"></span></a> Avo Reed</td>
+                                    	<td class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="avo"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span></a> Avo Reed</td>
                                         <td class="list-group-item col-xs-6">avo.reid@us.gt.com</td>
                                     </tr>
                                     <tr class="row">
-                                    	<td class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="jackie"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span><span class="glyphicon glyphicon-ok-sign visuallyremoved" aria-hidden="true"></span></a> Jackie Babos</td>
+                                    	<td class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="jackie"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span></a> Jackie Babos</td>
                                         <td class="list-group-item col-xs-6">jackie.babos@us.gt.com</td>
                                   	</tr>
                                     <tr class="row">
-                                    	<td class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="jacob"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span><span class="glyphicon glyphicon-ok-sign visuallyremoved" aria-hidden="true"></span></a> Jacob Goldstein</td>
+                                    	<td class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="jacob"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span></a> Jacob Goldstein</td>
                                         <td class="list-group-item col-xs-6">jacob.goldstein@us.gt.com</td>
                                    	</tr>
                                     <tr class="row">
-                                    	<td class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="avo"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span><span class="glyphicon glyphicon-ok-sign visuallyremoved" aria-hidden="true"></span></a> Avo Reed</td>
+                                    	<td class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="avo"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span></a> Avo Reed</td>
                                         <td class="list-group-item col-xs-6">avo.reid@us.gt.com</td>
                                     </tr>
                                     <tr class="row">
-                                    	<td class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="jackie"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span><span class="glyphicon glyphicon-ok-sign visuallyremoved" aria-hidden="true"></span></a> Jackie Babos</td>
+                                    	<td class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="jackie"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span></a> Jackie Babos</td>
                                         <td class="list-group-item col-xs-6">jackie.babos@us.gt.com</td>
                                   	</tr>
                                     <tr class="row">
-                                    	<td class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="jacob"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span><span class="glyphicon glyphicon-ok-sign visuallyremoved" aria-hidden="true"></span></a> Jacob Goldstein</td>
+                                    	<td class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="jacob"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span></a> Jacob Goldstein</td>
                                         <td class="list-group-item col-xs-6">jacob.goldstein@us.gt.com</td>
                                    	</tr>
                                 </table>
