--- a/owner_info_M1.html
+++ b/owner_info_M1.html
@@ -284,27 +284,27 @@
                                     <td class="list-group-item inner-addon right-addon col-xs-6"><i class="glyphicon glyphicon-search" aria-hidden="true"></i><input type="text" class="form-control" id="contactsearch" placeholder="Search" aria-label="search"></td>
                                 </tr>
                                 <tr class="row">
-                                    <td class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="avo"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span><span class="glyphicon glyphicon-ok-sign visuallyremoved" aria-hidden="true"></span></a> Avo Reid</td>
+                                    <td class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="avo"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span></a> Avo Reid</td>
                                     <td class="list-group-item col-xs-6">avo.reid@us.gt.com</td>
                                 </tr>
                                 <tr class="row">
-                                    <td class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="jackie"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span><span class="glyphicon glyphicon-ok-sign visuallyremoved" aria-hidden="true"></span></a> Jackie Babos</td>
+                                    <td class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="jackie"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span></a> Jackie Babos</td>
                                     <td class="list-group-item col-xs-6">jackie.babos@us.gt.com</td>
                                 </tr>
                                 <tr class="row">
-                                    <td class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="jacob"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span><span class="glyphicon glyphicon-ok-sign visuallyremoved" aria-hidden="true"></span></a> Jacob Goldstein</td>
+                                    <td class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="jacob"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span></a> Jacob Goldstein</td>
                                     <td class="list-group-item col-xs-6">jacob.goldstein@us.gt.com</td>
                                 </tr>
                                 <tr class="row">
-                                    <td class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="li"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span><span class="glyphicon glyphicon-ok-sign visuallyremoved" aria-hidden="true"></span></a> Li Zhang</td>
+                                    <td class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="li"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span></a> Li Zhang</td>
                                     <td class="list-group-item col-xs-6">li.zhang@us.gt.com</td>
                                 </tr>
                                 <tr class="row">
-                                    <td class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="lynn"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span><span class="glyphicon glyphicon-ok-sign visuallyremoved" aria-hidden="true"></span></a> Lynn Stanikmas</td>
+                                    <td class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="lynn"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span></a> Lynn Stanikmas</td>
                                     <td class="list-group-item col-xs-6">lynn.stanikmass@us.gt.com</td>
                                 </tr>
                                 <tr class="row">
-                                    <td class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="sarah"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span><span class="glyphicon glyphicon-ok-sign visuallyremoved" aria-hidden="true"></span></a> Sarah Sara</td>
+                                    <td class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="sarah"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span></a> Sarah Sara</td>
                                     <td class="list-group-item col-xs-6">sarah.sara@us.gt.com</td>
                                 </tr>
                             </table>
