--- a/owner_info_M1.html
+++ b/owner_info_M1.html
@@ -26,7 +26,8 @@
     <link rel="stylesheet" href="css/lynnstyles.css">
     <link rel="import" href="import_individual.html" id="individual">
     <link rel="import" href="import_sole.html" id="sole">
-    <link rel="import" href="import_corp.html" id="corp">
+    <!--<link rel="import" href="import_corp.html" id="corp">-->
+    <link rel="import" href="import_corp.html" id="corpforeignbahamas">
    </head>
 
 <body>
@@ -190,18 +191,18 @@
                                     </div>
                                 </div>
                                 <p id="usforeign">Is the owner a U.S. or Foreign Entity?</p>
-                                <div role="radiogroup" aria-labelledby="usforeign" class="form-group form-group-md">
-                                  <label for="inlineRadio019" class="radio-inline radiocontainer" id="usentityselected">US Entity<input type="radio" name="usforeignradio" id="inlineRadio019" value="usentity" tabindex="0"><span class="checkmark"></span></label>
-                                  <label for="inlineRadio020" class="radio-inline radiocontainer" id="foreignentityselected">Foreign Entity<input type="radio" name="usforeignradio" id="inlineRadio020" value="foreignentity" tabindex="0"><span class="checkmark"></span></label>
-                                </div><!--END radiogroup-->
-                                <script type="application/javascript" src="js/accordion.js"></script>
-                                <script type="application/javascript" src="js/checkbox.js"></script>
-                                <script type="application/javascript" src="js/btn_checkbox.js"></script>
-                                <div id="yesusentity" role="region" aria-labelledby="usforeign">
-                                    <form method="post" id="" action="" aria-labelledby="usentityselected">
+                                <form method="post" id="" action="">
+                                    <div role="radiogroup" aria-labelledby="usforeign" class="form-group form-group-md">
+                                      <label for="inlineRadio019" class="radio-inline radiocontainer" id="usentityselected">US Entity<input type="radio" name="usforeignradio" id="inlineRadio019" value="usentity" tabindex="0"><span class="checkmark"></span></label>
+                                      <label for="inlineRadio020" class="radio-inline radiocontainer" id="foreignentityselected">Foreign Entity<input type="radio" name="usforeignradio" id="inlineRadio020" value="foreignentity" tabindex="0"><span class="checkmark"></span></label>
+                                    </div><!--END radiogroup-->
+                                    <script type="application/javascript" src="js/accordion.js"></script>
+                                    <script type="application/javascript" src="js/checkbox.js"></script>
+                                    <script type="application/javascript" src="js/btn_checkbox.js"></script>
+                                    <div id="yesusentity" role="region" aria-labelledby="usforeign">
                                         <fieldset aria-labelledby="entitytype">
                                             <div class="row">
-                                              <div class="form-group form-group-md col-xs-12 col-lg-6">
+                                              <div class="form-group form-group-md col-xs-6">
                                                 <label for="entype">Please select the entity type:</label>
                                                 <select class="form-control" id="entype">
                                                   <option value="Select">Select</option>
@@ -219,16 +220,89 @@
                                               </div>
                                             </div>
                                             <div class="col-xs-12">
-                                        		<button type="button" class="btn-sm btn-success fill" id="autofill">Fill from Contacts</button>
-                                    		</div>
+                                                <button type="button" class="btn-sm btn-success fill" id="autofill">Fill from Contacts</button>
+                                            </div>
                                             <div class="row">
                                                 <div class="col-xs-12">
                                                     <div id="container"></div><!--external forms load into-->
                                                 </div>
                                             </div>
+                                        </fieldset><!--END US Owner Information-->
+                                    </div><!--END US owner toggle area-->
+                                    
+                                    <div id="yesforeignentity" role="region" aria-labelledby="usforeign">
+                                        <fieldset aria-labelledby="entitytype">
+                                            <div class="row">
+                                              <div class="form-group form-group-md col-xs-6">
+                                                <label for="entitycountry">Please select country:</label>
+                                                <select class="form-control" id="entitycountry">
+                                                  <option value="Select">Select</option>
+                                                  <option value="albania">Albania</option>
+                                                  <option value="algeria">Algeria</option>
+                                                  <option value="angola">Angola</option>
+                                                  <option value="bahamas">Bahamas</option>
+                                                </select>
+                                              </div>
+                                              <div class="form-group form-group-md col-xs-6" id="switchselect">
+                                              	<div class="row">
+                                                    <div class="col-xs-12 albaniaform">
+                                                        <label for="entypeforeignalbania">Please select the entity type:</label>
+                                                        <select class="form-control" id="entypeforeignalbania">
+                                                          <option value="Select">Select</option>
+                                                          <option value="jointstock">Joint Stock Company</option>
+                                                          <option value="liabilitco">Limited Liability Company</option>
+                                                        </select>
+                                                    </div>
+                                                    <div class="col-xs-12 algeriaform">
+                                                        <label for="entypeforeignalgeria">Please select the entity type:</label>
+                                                        <select class="form-control" id="entypeforeignalgeria">
+                                                          <option value="Select">Select</option>
+                                                          <option value="jointstock">Joint Stock Company</option>
+                                                          <option value="liabilitco">Limited Liability Company</option>
+                                                          <option value="limitedpartner">Limited Partnership</option>
+                                                          <option value="limitedpartnershares">Limited Partnership with Shares</option>
+                                                          <option value="publiclimited">Public Limited Company</option>
+                                                        </select>
+                                                    </div>
+                                                    <div class="col-xs-12 angolaform">
+                                                        <label for="entypeforeignangola">Please select the entity type:</label>
+                                                        <select class="form-control" id="entypeforeignalgeria">
+                                                          <option value="Select">Select</option>
+                                                          <option value="jointstock">Joint Stock Company</option>
+                                                          <option value="liabilitco">Limited Liability Company</option>
+                                                          <option value="limitedpartner">Limited Partnership</option>
+                                                          <option value="limitedpartnershares">Limited Partnership with Shares</option>
+                                                          <option value="publiclimited">Public Limited Company</option>
+                                                        </select>
+                                                    </div>
+                                                    <div class="col-xs-12 bahamasform">
+                                                        <label for="entypeforeignbahamas">Please select the entity type:</label>
+                                                        <select class="form-control" id="entypeforeignbahamas">
+                                                          <option value="Select">Select</option>
+                                                          <option value="soleforeign">Sole Proprietorship</option>
+                                                          <option value="corpforeign">Corporation</option>
+                                                          <option value="domestic">Domestic Limited Companies</option>
+                                                          <option value="expartnership">Exempted Limited Partnership</option>
+                                                          <option value="international">International Business Company</option>
+                                                          <option value="duration">Limited Duration Company</option>
+                                                          <option value="liabilitco">Limited Liability Company</option>
+                                                          <option value="liabilitpart">Limited Liability Partnership</option>
+                                                        </select>
+                                                    </div>
+                                             	</div>
+                                             </div>
+                                         </div>
+                                        <div class="col-xs-12">
+                                            <button type="button" class="btn-sm btn-success fill" id="autofill">Fill from Contacts</button>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-xs-12">
+                                                <div id="containerforeign"></div><!--external forms load into-->
+                                            </div>
+                                        </div>
                                         </fieldset><!--END Owner Information-->
-                                        </form><!--END Owner Form-->
-                                </div><!--END owner toggle area-->
+                                    </div><!--END owner toggle area-->
+                                </form><!--END Owner Form-->
                             </section>
                         </div>
                     </div>
