Contacts Widget and Fill Button
clearform functionality updated, fill button updated

--- a/owner_info_M1.html
+++ b/owner_info_M1.html
@@ -293,7 +293,7 @@
                                              </div>
                                          </div>
                                         <div class="col-xs-12">
-                                            <button type="button" class="btn-sm btn-success fill" id="autofill">Fill from Contacts</button>
+                                            <button type="button" class="btn-sm btn-success fill" id="autofillforeign">Fill from Contacts</button>
                                         </div>
                                         <div class="row">
                                             <div class="col-xs-12">
@@ -354,7 +354,7 @@
                         <div id="collapse2" class="panel-collapse collapse" aria-labelledby="contactsbtn">
                             <table class="list-group table">
                                 <tr class="row">
-                                    <td class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="clearform">Clear Form</a></td>
+                                    <td class="list-group-item col-xs-6"><a href="#" class="fromcontactclear" id="clearform">Clear Form</a></td>
                                     <td class="list-group-item inner-addon right-addon col-xs-6"><i class="glyphicon glyphicon-search" aria-hidden="true"></i><input type="text" class="form-control" id="contactsearch" placeholder="Search" aria-label="search"></td>
                                 </tr>
                                 <tr class="row">
