--- a/attorney_info_M010.html
+++ b/attorney_info_M010.html
@@ -784,7 +784,7 @@ Upload bar credentials, including certificate of good standing from highest cour
                             <div id="collapse2" class="panel-collapse collapse" aria-labelledby="contactsbtn">
                                 <table class="list-group table">
                                     <tr class="row">
-                                    	<td class="list-group-item col-xs-6"><a href="#" class="fromcontact" id="clearform">Clear Form</a></td>
+                                    	<td class="list-group-item col-xs-6"><a href="#" class="fromcontactclear" id="clearform">Clear Form</a></td>
                                     	<td class="list-group-item inner-addon right-addon col-xs-6"><i class="glyphicon glyphicon-search" aria-hidden="true"></i><input type="text" class="form-control" id="contactsearch" placeholder="Search" aria-label="search"></td>
                                  	</tr>
                                     <tr class="row">
