--- a/import_individual.html
+++ b/import_individual.html
@@ -76,7 +76,7 @@
                         <fieldset aria-labelledby="addressinfo">
                             <div class="row">
                               <div class="form-group form-group-md col-xs-12 col-md-6 col-lg-7">
-                                <label for="email"><span class="weight600">&#42;</span>Email Address <a href="#" data-toggle="tooltip" title="The USPTO will use this email address to end correspondence regarding this application or registration. It is critical to ensure this email address is current." class="glyphicon glyphicon-info-sign test" data-placement="right"></a></label>
+                                <label for="email"><span class="weight600">&#42;</span>Email Address <a href="#" data-toggle="tooltip" title="The USPTO will use this email address to send correspondence regarding this application or registration. It is critical to ensure this email address is current." class="glyphicon glyphicon-info-sign test" data-placement="right"></a></label>
                                 <input type="text" class="form-control" id="email" name="email" th:field="*{ownerEmail}" required>
                               </div>
                               <div class="form-group form-group-md col-xs-12 col-md-6 col-lg-7">
