--- a/marks_design_with_text_disclaimer_M2.html
+++ b/marks_design_with_text_disclaimer_M2.html
@@ -269,12 +269,16 @@
                                                           <label for="inlineRadio014" class="radio-inline radiocontainer">No<input type="radio" name="meaningradio" id="inlineRadio014" value="no" tabindex="0"><span class="checkmark"></span></label>
                                                         </div><!--END radiogroup-->
                                                         <div id="yesmeaning" role="region" class="form-horizontal form-group form-group-md">
-                                                            <div class="col-xs-12 col-md-7">
+                                                            <div class="col-xs-12 col-md-4">
                                                                 <label for="yesmeaning" class="sr-only">What has meaning or significance?</label>
                                                                 <input type="text" class="form-control" id="yesmeaning">
                                                             </div>
-                                                            <div class="control-label col-xs-12 col-md-5">
+                                                            <div class="control-label col-xs-12 col-md-4">
                                                                 <p>in the mark means or signifies</p>
+                                                            </div>
+                                                            <div class="col-xs-12 col-md-4">
+                                                                <label for="means" class="sr-only">enter what the mark means or signifies</label>
+                                                                <input type="text" class="form-control" id="means">
                                                             </div>
                                                         </div>
                                                     </div>
