--- a/owner_info_corporation.html
+++ b/owner_info_corporation.html
@@ -209,7 +209,7 @@
                             </div>
                             <div class="row">
                                 <div class="form-group form-group-md col-xs-12 col-md-6">
-                                    <label for="email"><span class="weight600">&#42;</span>Email Address <a href="#" data-toggle="tooltip" title="The USPTO will use this email address to end correspondence regarding this application or registration. It is critical to ensure this email address is current." class="glyphicon glyphicon-info-sign test" data-placement="right"></a></label>
+                                    <label for="email"><span class="weight600">&#42;</span>Email Address <a href="#" data-toggle="tooltip" title="The USPTO will use this email address to send correspondence regarding this application or registration. It is critical to ensure this email address is current." class="glyphicon glyphicon-info-sign test" data-placement="right"></a></label>
                                     <input type="text" class="form-control" id="email" th:field="*{ownerEmail}" required>
                                 </div>
                             </div>
