--- a/payment.html
+++ b/payment.html
@@ -8,7 +8,7 @@
 
     <link rel="shortcut icon" style="-moz-border-radius: 0px;-webkit-border-radius: 0px;border-radius: 0px;" type="image/x-icon" th:href="@{/resources/images/nav_banner.png}">
 
-    <title>USPTO.gov :: webapp prototype :: Declaration and Signature</title>
+    <title>USPTO.gov :: webapp prototype :: Payment</title>
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -21,7 +21,7 @@
 	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <!--<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--<link rel="stylesheet" href="usPTO.css">-->
     <link rel="stylesheet" href="css/reset.css">
@@ -170,27 +170,22 @@
                     </div>
                     <div class="row">
                         <div class="col-xs-12">
-                            <h1>Declaration and Signature</h1>
+                            <h1>Payment</h1>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-xs-12" id="declarationsignature">
-                                <div class="lead">
-                                    <p>Selecting edit will take you back to the appropriate section in the application.</p>
-                                </div>
-                                <div class="card-text noexpand">
-                                    <h2 class="card-title weight600">Review Application</h2>
-                                </div>
+                            <div class="lead">
+                                <h2>Order Details <a href="#" data-toggle="tooltip" title="Order details" class="glyphicon glyphicon-info-sign test" data-placement="right"></a></h2>
+                            </div>
                             <form action="" method="post" >
                                <fieldset>
                                 <div class="row">
                                     <div class="form-group form-group-md col-xs-12">
                                         <div class="row">
-                                            <section aria-label="mark information" id="scrollone">
-                                                <div class="col-xs-12 float">
-                                                	<h3 class="overline">Mark Information</h3>
-                                                    <span class="overline"><a href="#">Edit</a></span>
-                                                    <br clear="all">
+                                            <section aria-label="order data">
+                                                <div class="col-xs-12">
+                                                	<h3 class="overline">Total</h3>
                                                 </div>
                                                 <div class="col-xs-12">
                                                     <div class="row">
@@ -410,7 +405,7 @@
                                                     <div class="row">
                                                         <div class="col-xs-12 form-group form-group-md">
                                                             <label for="ta2" class="weight600">How are you signing the application?</label> 
-                                                            <select class="form-control" id="signmethod">
+                                                            <select class="form-control" id="concurrent-country">
                                                                 <option value="Select">Select Signature Method</option>
                                                                 <option value="direct">Sign Directly</option>
                                                                 <option value="handwritten">Print and Upload Handwritten Signature</option>
@@ -422,7 +417,7 @@
                                                 </div>
                                             </section>
                                         </div><!--//signature method-->
-                                        <div class="row" id="direct">
+                                        <div class="row">
                                             <section class="col-xs-12" aria-label="declarations" id="declarationschecks">
                                                 <div class="card-text noexpand">
                                                     <h2 class="card-title weight600">Declarations</h2>
@@ -497,6 +492,7 @@
                                                 </div>
                                             </section>
                                    		</div><!--//sign-->
+                                        
                                     </div><!--END formgroup-->
                                 </div>
                            </fieldset>
