--- a/declaration_signature.html
+++ b/declaration_signature.html
@@ -393,7 +393,7 @@
                                             </section>
                                             <div class="col-xs-12">
                                                 <div class="row">
-                                                    <div class="col-xs-12" role="group" aria-label="Add or delete additional application/registration">
+                                                    <div class="col-xs-12" role="group" aria-label="accept">
                                                         <div class="col-xs-12">
                                                             <button type="button" class="btn-sm btn-success add ctr" id="acceptreview">Accept</button>
                                                         </div>
