--- a/filing_basis_abde.html
+++ b/filing_basis_abde.html
@@ -204,7 +204,7 @@
                                                     </div>
                                                     <div class="col-xs-12 col-md-6">
                                                         <label for="specdescript">Provide a description of your specimen:</label> 
-                                                        <textarea id="specdescript" rows="4" class="form-control"></textarea>
+                                                        <textarea id="specdescript" class="form-control"></textarea>
                                                     </div>
                                                 </section>
                                             </div>
@@ -242,7 +242,7 @@
                                                             </div>
                                                             <div class="col-xs-12 col-md-6">
                                                                 <label for="specdescriptwo">Provide a description of your specimen:</label> 
-                                                                <textarea id="specdescriptwo" rows="4" class="form-control"></textarea>
+                                                                <textarea id="specdescriptwo" class="form-control"></textarea>
                                                             </div>
                                                         </div>
                                                         <div class="col-xs-12 form-group form-group-md">
@@ -292,7 +292,7 @@
                                                             </div>
                                                             <div class="col-xs-12 col-md-6">
                                                                 <label for="specdescriptwo">Provide a description of your specimen:</label> 
-                                                                <textarea id="specdescriptwo" rows="4" class="form-control"></textarea>
+                                                                <textarea id="specdescriptwo" class="form-control"></textarea>
                                                             </div>
                                                         </div>
                                                         <div class="col-xs-12 form-group form-group-md">
