--- a/dashboard.html
+++ b/dashboard.html
@@ -18,7 +18,7 @@
 	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
 <!--    <link rel="stylesheet" th:href="@{/resources/css/usPTO.css}"/>
 --> <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
-<link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.dataTables.min.css">  
+	<link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.dataTables.min.css">  
 	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
@@ -288,13 +288,13 @@
                                                         </ul>
                                                         <div class="tabpanels second">
                                                             <div id="panel1-wt" tabindex="0">
-                                                                <p>The USPTO has updated the two-step authentication to  modernize the security process.</p>
+                                                                <p>The USPTO has updated the two-step authentication to modernize the security process.</p>
                                                             </div>
                                                             <div id="panel2-wt" tabindex="0">
-                                                                <p>The USPTO will perfrom maintenance on the Electronic System for Trademark Trials and Appeals (ESTTA) beginning at 12:01 a.m., Saturday, Setpember.</p>
+                                                                <p>The USPTO will perform maintenance on the Electronic System for Trademark Trials and Appeals (ESTTA) beginning at 12:01 a.m., Saturday, Setpember.</p>
                                                             </div>
                                                             <div id="panel3-wt" tabindex="0">
-                                                                <p>The USPTO will perfrom maintenance on the Electronic System for Trademark Trials and Appeals (ESTTA) beginning at 12:01 a.m., Saturday, Setpember.</p>
+                                                                <p>The USPTO will perform maintenance on the Electronic System for Trademark Trials and Appeals (ESTTA) beginning at 12:01 a.m., Saturday, Setpember.</p>
                                                             </div>
                                                         </div>
                                                     </div>
