--- a/dashboard.html
+++ b/dashboard.html
@@ -73,7 +73,7 @@
           <br style="clear:both">
           
           <ul class="nav navbar-nav navbar-right" id="lowernav">
-          	<li class="dropdown">
+          	<!--<li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Fees $225<span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li id="firstli">Basic Fees $225</li>
@@ -84,12 +84,12 @@
                 <li role="separator" class="divider"></li>
                 <li id="lastli">Total Fee $225</li>
               </ul>
-            </li>
+            </li>-->
 		<!--<li><a href="#">Actions</a></li>
             <li><a href="#">Applications / Registration</a></li>-->
             <!--<li><a href="#" class="glyphed" id="showcontacts"><span class="glyphicon glyphicon-list" aria-hidden="true"></span>Managed Contacts</a></li>-->
             <!--<li><a href="#" class="glyphed" id="showfees"><span class="glyphicon glyphicon-usd kerned" aria-hidden="true"></span>Fees</a></li>-->
-            <li><a href="#" class="glyphed" data-toggle="popover" id="togglepop"><span class="glyphicon glyphicon-picture" aria-hidden="true"></span>Show My Mark</a></li>
+            <!--<li><a href="#" class="glyphed" data-toggle="popover" id="togglepop"><span class="glyphicon glyphicon-picture" aria-hidden="true"></span>Show My Mark</a></li>-->
           </ul>
           <br style="clear:both">
         </div><!-- /.navbar-collapse -->
